log
Thu 24 Aug 2023 07:50:28 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List* lista=(List*)malloc(sizeof(List));
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0f22d85
Thu 24 Aug 2023 07:50:38 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:8: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List*lista=(List*)malloc(sizeof(List));
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
28ae6b0
Thu 24 Aug 2023 07:51:27 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:8: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List*lista=(List*)malloc(sizeof(List));
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e823a0f
Thu 24 Aug 2023 07:51:41 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:11: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List *  lista=(List*)malloc(sizeof(List));
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
bfee2fe
Thu 24 Aug 2023 07:51:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘lista0’ [-Werror=unused-variable]
   32 |   List *lista0=(List*)malloc(sizeof(List));
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
79359e4
Thu 24 Aug 2023 07:52:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b1c9186
Thu 24 Aug 2023 07:58:36 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:7: error: ‘lista0’ undeclared (first use in this function); did you mean ‘list’?
   37 |   if (lista0->head!=NULL){
      |       ^~~~~~
      |       list
list.c:37:7: note: each undeclared identifier is reported only once for each function it appears in
list.c:38:33: error: expected ‘;’ before ‘}’ token
   38 |     lista0->current=lista0->head
      |                                 ^
      |                                 ;
   39 |   }return lista0->head->data
      |   ~                              
list.c:39:29: error: expected ‘;’ before ‘}’ token
   39 |   }return lista0->head->data
      |                             ^
      |                             ;
   40 | }return NULL;
      | ~                            
list.c: At top level:
list.c:40:2: error: expected identifier or ‘(’ before ‘return’
   40 | }return NULL;
      |  ^~~~~~
list.c: In function ‘firstList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }return NULL;
      | ^
cc1: all warnings being treated as errors
Compilation failed
641bc1a
Thu 24 Aug 2023 07:58:47 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:7: error: ‘lista0’ undeclared (first use in this function); did you mean ‘list’?
   37 |   if (lista0->head!=NULL){
      |       ^~~~~~
      |       list
list.c:37:7: note: each undeclared identifier is reported only once for each function it appears in
list.c: At top level:
list.c:40:2: error: expected identifier or ‘(’ before ‘return’
   40 | }return NULL;
      |  ^~~~~~
list.c: In function ‘firstList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }return NULL;
      | ^
cc1: all warnings being treated as errors
Compilation failed
376deff
Thu 24 Aug 2023 08:00:20 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c:40:2: error: expected identifier or ‘(’ before ‘return’
   40 | }return NULL;
      |  ^~~~~~
Compilation failed
725586f
Thu 24 Aug 2023 08:00:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
aa2d070
Thu 24 Aug 2023 08:01:48 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
787c181
Thu 24 Aug 2023 08:08:35 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:46:38: error: expected ‘;’ before ‘}’ token
   46 |     list->current=list->current->next
      |                                      ^
      |                                      ;
   47 |   }
      |   ~                                   
Compilation failed
f0ae2bd
Thu 24 Aug 2023 08:08:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b3645a5
Thu 24 Aug 2023 08:09:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
1e4636c
Thu 24 Aug 2023 08:10:12 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
31524ee
Thu 24 Aug 2023 08:19:07 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
3e889da
Thu 24 Aug 2023 08:20:21 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:63:28: error: expected ‘;’ before ‘}’ token
   63 |     return list->head->data
      |                            ^
      |                            ;
   64 |   }
      |   ~                         
Compilation failed
7cbaafb
Thu 24 Aug 2023 08:20:47 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:63:28: error: expected ‘;’ before ‘}’ token
   63 |     return list->head->data
      |                            ^
      |                            ;
   64 |     }
      |     ~                       
Compilation failed
d7b313b
Thu 24 Aug 2023 08:20:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
fcb7ccf
Thu 24 Aug 2023 08:21:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
688c863
Thu 24 Aug 2023 08:23:04 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
b40462a
